2010-05-28  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet.Gui/AspNetEditorExtension.cs:
	* MonoDevelop.AspNet.Gui/ILanguageCompletionBuilder.cs: Pass
	  the full list of usings to the ILanguageCompletionBuilder.

	* MonoDevelop.AspNet/WebTypeManager.cs:
	* MonoDevelop.AspNet/ProjectRegisteredControls.cs:
	  Registration cache now tracks imports and assembly
	  registrations.

	* Makefile.am:
	* MonoDevelop.AspNet.csproj: Add Sysytem.Xml.Linq reference.

2010-05-28  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Html/PathCompletion.cs:
	* MonoDevelop.AspNet/MasterContentFileDescriptionTemplate.cs:
	  Fix incorrect use of ShowCustomDialog/RunCustomDialog.

2010-05-27  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet/CodeBehind.cs:
	* MonoDevelop.AspNet.Parser/MemberListVisitor.cs:
	* MonoDevelop.AspNet/VerifyCodeBehindBuildStep.cs: Fixed Bug
	  524051 - .as?x.designer.cs code generated by MonoDevelop
	  includes fields already present in the main class.

2010-05-27  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet/CodeBehind.cs:
	* MonoDevelop.AspNet/WebTypeManager.cs:
	* MonoDevelop.AspNet/AspNetToolboxNode.cs:
	* MonoDevelop.AspNet.Gui/AspNetEditorExtension.cs:
	* MonoDevelop.AspNet.Parser/WebFormReferenceManager.cs:
	* MonoDevelop.AspNet.Parser/DocumentReferenceManager.cs: Move
	  all the WebTypeManager static utility-type methods onto a
	  WebTypeContext class. Reduces arguments and will make it
	  easier to cache stuff.

2010-05-26  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet/WebTypeManager.cs: Added method for
	  getting the IType for an HTML control. 

	* MonoDevelop.AspNet.Parser/DocumentReferenceManager.cs: Added
	  method for looking up IType of arbitrary tag.

2010-05-26  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AspNet/AspNetAppProjectBinding.cs: Fix creating
	  ASP.NET single file projects. Fixes Bug 603521 - Command
	  errors opening aspx file.